@@ -35,3 +35,8 @@ class Configuration
   end
 
 end
+
+# Local configuration, for example, details of the SMTP server for email notification, should be 
+# written in ./config/site_config.rb. See ./config/site_config.rb_example for an example of what this file may 
+# look like.
+require 'site_config' if RAILS_ENV != 'test' && File.exists?("#{RAILS_ROOT}/config/site_config.rb")
