@@ -22,7 +22,4 @@ config.action_mailer.raise_delivery_errors = false
 
 CruiseControl::Log.verbose = true
 
-# Local configuration, for example, details of the SMTP server for email notification, should be 
-# written in ./config/site_config.rb. See ./config/site_config.rb_example for an example of what this file may 
-# look like.
-require 'site_config' if File.exists?("#{RAILS_ROOT}/config/site_config.rb")
+require 'configuration'
